# keychain

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ChangeLog.md  MAINTAINERS.txt  MANIFEST.in  Makefile  README.md  VERSION  keychain.pod  keychain.sh  keychain.spec.in  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-ci.yml  release.yml
docs/: python-rationale.md  release-steps.md
man/: embedded-docs.txt
scripts/: build_backend.py  build_doc_texts.py  fetch-ci-artifacts.sh  pyz_bootstrap.py  release-common.sh  release-create.sh  release-notes.sh  release-orchestrate.sh  release-refresh.sh  test-completion.sh  test-space-home.sh
src/keychain/: __init__.py  __main__.py  agents.py  doc_texts.py  env.py  keys.py  main.py  paths.py  state.py  util.py
src/keychain/docs/: __init__.py
src/keychain/output/: core.py  inspect.py  tables.py
src/keychain/runtime/: actions.py  compat.py  config.py  platform.py
tests/: conftest.py  support.py  test_agents.py  test_build_backend.py  test_build_doc_texts.py  test_cli_actions.py  test_cli_help.py  test_cli_legacy.py  test_cli_parse.py  test_cli_startup.py  test_compat.py  test_e2e_playbooks.py  test_envfile.py  test_gpg_e2e.py  test_help.py  test_keys.py  test_output.py  test_paths.py  test_runtime.py  test_runtime_config.py  test_state.py  test_tables.py  test_util.py
